fix(#305): address Copilot PR review comments
- RunManager.submitRun(): add Objects.requireNonNull(template) before Semaphore.tryAcquire()
  to prevent NPE + semaphore permit leak when template is null
- RunManager.evictCompletedRunsIfNeeded(): add synchronized + runId tie-breaker to prevent
  concurrent completions from computing stale snapshots and over-evicting
- RunState.getTaskOutputs(): return List.copyOf() snapshot instead of unmodifiable view of
  synchronizedList -- callers can safely iterate without holding the list's intrinsic lock
- WebDashboard: update runManager field Javadoc to reflect it is always created (never null)
- WebSocketServer POST /api/runs: remove dead runManager null check (RunManager is always
  created by WebDashboard and always set on the server)
- WebSocketServer runRequestParser field: add @SuppressWarnings("unused") with Phase 2 note
- RunApiIntegrationTest: remove dead doneLatch local variable in getRuns_afterSubmission_returnsRun

All 475 tests pass; JaCoCo LINE >= 90% and BRANCH >= 75% both pass; build clean.